--- a/HW1/job.yaml
+++ b/HW1/job.yaml
@@ -6,6 +6,6 @@ spec:
   template:
     spec:
       containers:
-      - name: $JOB_NAME
+      - name: $JOB_NAME-$BUILD_NUMBER
         image: mrlvs/java:1.0.0
       restartPolicy: Never
