--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   jenkins:
-    image: jenkins/jenkins-agent:lts
+    image: jenkins/jenkins:lts
     restart: always
     ports: ["8080:8080"]
     volumes:
