--- a/hw1/job.yaml
+++ b/hw1/job.yaml
@@ -6,6 +6,6 @@ spec:
   template:
     spec:
       containers:
-      - name: $JOB_NAME-$BUILD_NUMBER
+      - name: lukin-$JOB_NAME
         image: mrlvs/java:1.0.0
       restartPolicy: Never
