--- a/hw1/job.yaml
+++ b/hw1/job.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: java-job-lukin
+  name: java-job-lukin-$BUILD_NUMBER
 spec:
   template:
     spec:
