--- a/hw2/Jenkinsfile
+++ b/hw2/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
 
     environment {
         IMAGE_REPO = 'mrlvs/java'
-        TAG = "latest"
+        TAG = "1.0.0"
     }
 
     stages {
