--- a/hw2/Jenkinsfile
+++ b/hw2/Jenkinsfile
@@ -12,8 +12,9 @@ pipeline {
         stage("Build") {
             steps {
                 sh '''
+                printenv
                 docker pull $IMAGE_REPO:$TAG
-                docker build $IMAGE_REPO:$TAG -t $IMAGE_REPO:$TAG-JOB_NAME ./
+                docker build -t $IMAGE_REPO:$TAG-JOB_NAME ./
                 '''
 
                
