--- a/hw2/Jenkinsfile
+++ b/hw2/Jenkinsfile
@@ -13,6 +13,7 @@ pipeline {
             steps {
                 sh '''
                 printenv
+                pwd
                 docker pull $IMAGE_REPO:$TAG
                 docker build -t $IMAGE_REPO:$TAG-$JOB_NAME ./
                 '''
