--- a/hw2/Jenkinsfile
+++ b/hw2/Jenkinsfile
@@ -15,6 +15,8 @@ pipeline {
                 printenv
                 pwd
                 docker pull $IMAGE_REPO:$TAG
+                pwd
+                ls -la
                 docker build -t $IMAGE_REPO:$JOB_NAME-$BUILD_NUMBER ./
                 '''
 
