--- a/hw2/Jenkinsfile
+++ b/hw2/Jenkinsfile
@@ -43,7 +43,9 @@ pipeline {
                         }
                     }
                     steps {
-                        sh 'mvn test'
+                        sh 'pwd'
+                        sh 'ls -la'
+                        sh 'mvn -f ./'
                     }
                     post {
                         always {
