--- a/hw2/Jenkinsfile
+++ b/hw2/Jenkinsfile
@@ -97,7 +97,7 @@ pipeline {
 
             steps{
                 withCredentials([kubeconfigFile(credentialsId: 'kubeconf', variable: 'KUBECONFIG')]) {
-                    sh 'helm -n $NAMESPACE install chart1 hell-m-chart/'
+                    sh 'helm install chart1 hell-m-chart/ -n $NAMESPACE'
                 }
             }
         }
