--- a/hw2/Jenkinsfile
+++ b/hw2/Jenkinsfile
@@ -82,11 +82,11 @@ pipeline {
 
         stage("Deploy"){
             agent{
-                
-                    
+                docker {
+                    image 'alpine/helm'
                     label 'docker'
                     
-                
+                }
             }
             input {
                 message 'What a Namespace?'
