--- a/hw2/Jenkinsfile
+++ b/hw2/Jenkinsfile
@@ -91,15 +91,15 @@ pipeline {
             input {
                 message 'What a Namespace?'
                  parameters {
-                    choice choices: ['lukin', 'default', 'yaroshenko', 'filatov', 'maloglazov'], name: 'NAMESPACE'
+                    choice choices: ['lukin', 'default', 'filatov', 'maloglazov'], name: 'NAMESPACE'
                  }
             }
-            
+
             steps{
                 sh '''
                     pwd
                     ls -la
-                '''
+                    '''
             }
 
             steps{
