--- a/hw2/Jenkinsfile
+++ b/hw2/Jenkinsfile
@@ -95,7 +95,7 @@ pipeline {
 
             steps{
                 withCredentials([kubeconfigFile(credentialsId: 'kubeconf', variable: 'KUBECONFIG')]) {
-                    sh 'helm upgrade --install chart hell-m-chart/ -n $NAMESPACE'
+                    sh 'helm -n lukin upgrade --install chart hell-m-chart/'
                 }
             }
         }
