--- a/hw2/Jenkinsfile
+++ b/hw2/Jenkinsfile
@@ -42,7 +42,7 @@ pipeline {
                     }
                     steps {
                         sh 
-                        ]'''pwd 
+                        '''pwd 
                         ls -la
 
                         mvn test'''
