--- a/hw2/Jenkinsfile
+++ b/hw2/Jenkinsfile
@@ -99,7 +99,7 @@ pipeline {
 
             steps{
                 withCredentials([kubeconfigFile(credentialsId: 'kubeconf', variable: 'KUBECONFIG')]) {
-                    sh 'helm -n lukin upgrade --install chart hw2/hell-m-chart/'
+                    sh 'helm -n $NAMESPACE upgrade --install chart-$BUILD_NUMBER hw2/hell-m-chart/'
                 }
             }
         }
